<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="se.yverling.wearto.items.ItemsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:minWidth="350dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/import_title"
                android:text="@string/import_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Spinner
                android:id="@+id/projects_spinner"
                tools:listitem="@layout/spinner_list_header"
                app:spinnerAdapter="@{viewModel.importItemsAdapter}"
                app:selectedValue="@={viewModel.projectToBeImported}"
                android:spinnerMode="dialog"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/import_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/include_completed_checkbox"
                android:text="@string/include_completed_items"
                android:checked="@={viewModel.includeCompletedItemsInImport}"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/projects_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/include_removed_checkbox"
                android:text="@string/include_locally_removed_items"
                android:checked="@={viewModel.includeRemovedItemsWhenImporting}"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/include_completed_checkbox"
                app:layout_constraintStart_toStartOf="@+id/include_completed_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/import_button"
                android:onClick="@{() -> viewModel.importItems()}"
                android:text="@string/import_button_title"
                android:textAllCaps="true"
                android:textColor="@color/accent"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/include_removed_checkbox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/cancel_button"
                android:text="@string/cancel_button_title"
                android:onClick="@{() -> viewModel.cancelItemImport()}"
                android:textAllCaps="true"
                android:textColor="@color/accent"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toTopOf="@+id/import_button"
                app:layout_constraintEnd_toStartOf="@+id/import_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>